--- a/index.html
+++ b/index.html
@@ -30,4 +30,4 @@
     </body>
 </html>
 
-///Correção: Tags de cabeçalho HTML errada. <h1> para o título principal
+///Correção: Tags de cabeçalho HTML errada.
